# lessonplan

./: app.py  forms.py  glitch.json  lesson_generator.py  main.py  models.py  ppt_generator.py  pyproject.toml  requirements.txt  routes.py  test.py  textbook_processor.py  whatsapp_sender.py
static/: robots.txt  sitemap.xml
static/css/: custom.css  dark.css
static/js/: app.jsx
static/js/components/: Auth.jsx  Dashboard.jsx  LessonForm.jsx  LessonList.jsx  LessonView.jsx  Navigation.jsx
templates/: coningsoon.html  create_lesson.html  dashboard.html  edit_lesson.html  footer.html  index.html  index_new.html  lesson_list.html  login.html  navbar.html  register.html  textbook_to_lesson.html  user.html  whatsapp_sender.html
templates/ادمن/: dashboard.html
