[project]
name = "lessonplan-project"
version = "0.1.0"
description = "A lesson plan web app with Flask and Supabase"
authors = ["Your Name <youremail@example.com>"]
requires-python = ">=3.11"

# الحزم الأساسية اللي محتاجها المشروع
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "werkzeug>=3.1.3",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.2.0",
    "nltk>=3.9.1",
    "python-pptx>=1.0.2",
    "sqlalchemy>=2.0.40",
    "openai>=1.76.0",
    "supabase>=2.6.0",
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "beautifulsoup4>=4.13.4",
    "python-dotenv>=1.0.1",
    "python-docx"
]
